improv: WEB-0055 - After adding an event, add the event to the calendar and make sure the event is visible

--- a/Dribbly.Web/wwwroot/src/modules/main/components/timegridevent/timegridevent.component.scss
+++ b/Dribbly.Web/wwwroot/src/modules/main/components/timegridevent/timegridevent.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../custom/bootstrap/scss/_variables.scss';
 
 drbbly-timegridevent {
+    cursor: pointer;
 
     &.fc-event {
         background-color: $teal;
